--- a/app/view/QuestionView.mustache
+++ b/app/view/QuestionView.mustache
@@ -2,8 +2,14 @@
 
 <form class="questionForm" action="">
     {{#answers}}
-        <input type="radio" name="answer" >{{.}}<br>
+        <input type="radio" name="answer" value="{{.}}">{{.}}<br>
     {{/answers}}
     <br/>
-    <input type="submit" value="Submit">
+    
+    <input class="submit" type="submit" value="Submit" disabled="true">
 </form>
+
+{{#selectedAnswer}}
+    taetasfsd<br/>
+    selected: {{selectedAnswer}}
+{{/selectedAnswer}}
